# facho

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  COPYRIGHT  Dockerfile  HISTORY.rst  LICENSE  Makefile  Makefile.dev  README.md  README.rst  USAGE.md  USAGE.rst  invoice.xml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/DIAN/nomina/: README.md
examples/: generate-invoice-from-cli.py  generate-invoice-invoice.py  generate-nomina-from-cli.py  use-as-lib.py
experimental/facho-signer/: AUTHORS  COPYING  Makefile  README  boostrap.sh  configure.ac  facho-signer.c
experimental/facho-signer/src/: Makefile.am  README.md  facho_signer.c  facho_signer.h  main.c  xmlusigned.xml
experimental/facho-signer/src/xades/: minunit_ext.h  templates.c  xades.c  xades.h  xades_test.c
experimental/facho-signer/src/xades/xmlsec1/: errors.c  errors_helpers.h  xmltree.c
experimental/facho-signer/src/xmlsec1/: xmltree.c
experimental/facho-signer/xades/: Makefile  templates.c  xades.c  xades.h  xades_test.c
experimental/facho-wasm/xmlsec-wasm/: build.sh  build_libxml2.sh  build_openssl.sh  build_xmlsec.sh
facho/: __init__.py  cli.py  facho.py
facho/fe/: __init__.py  fe.py  form.py  form_xml.py
facho/fe/client/: __init__.py  dian.py
facho/fe/form/: __init__.py  query.py
facho/fe/form_xml/: __init__.py  attached_document.py  credit_note.py  debit_note.py  invoice.py  support_document.py  support_document_credit_note.py  utils.py
facho/fe/model/: __init__.py  common.py  dian.py
facho/fe/nomina/: __init__.py  amount.py  departamento.py  exception.py  hablitacion.py  lugar.py  municipio.py  pais.py
facho/model/: __init__.py
facho/model/fields/: __init__.py  amount.py  (+7 more)
tests/: cude.txt  example-with-passphrase.p12  example.key  example.p12  example.pem  fixtures.py  helpers.py  test_amount.py  test_attached_document.py  test_client_dian.py  test_data.py  test_facho.py  test_fe.py  test_fe_form.py  test_form.py  test_form_xml.py  test_model.py  test_model_invoice.py  test_nomina.py  test_nomina_ajuste.py  test_query.py
(+85 files in other folders)
